--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "encxvlna.doc.tar.xz": 5e0bdd266906cb6d5730cbe46026ad25e2c849f3
-  "encxvlna.tar.xz": 592b297bf32c24eea8514431a7ed79a6aba4dee9
+  encxvlna.doc.tar.xz: 996ef917980de74da7178aecdbd240497cb42322
+  encxvlna.tar.xz: 2e605a47a2dd3da0a97c7b07564ce6b029073367
