--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  encxvlna.doc.tar.xz: 996ef917980de74da7178aecdbd240497cb42322
-  encxvlna.tar.xz: 2e605a47a2dd3da0a97c7b07564ce6b029073367
+  encxvlna.doc.r34087.tar.xz: 0bff6a7627de08b8ee8814902e2b2a1d78e15e66
+  encxvlna.r34087.tar.xz: 59b8236cb80e28fc685ac7dd037aab65b9d8ed60
